@@ -26,7 +26,6 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 
-import jakarta.servlet.ServletException;
 import org.eclipse.jetty.client.api.ContentResponse;
 import org.eclipse.jetty.client.api.Response;
 import org.eclipse.jetty.client.api.Result;
@@ -34,8 +33,11 @@ import org.eclipse.jetty.client.util.ByteBufferRequestContent;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpMethod;
 import org.eclipse.jetty.http.HttpStatus;
+import org.eclipse.jetty.server.Handler;
 import org.eclipse.jetty.server.Request;
 import org.eclipse.jetty.toolchain.test.IO;
+import org.eclipse.jetty.util.Callback;
+import org.eclipse.jetty.util.MultiMap;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -436,12 +438,12 @@ public class HttpClientRedirectTest extends AbstractHttpClientServerTest
     public void testRedirectWithCorruptedBody(Scenario scenario) throws Exception
     {
         byte[] bytes = "ok".getBytes(StandardCharsets.UTF_8);
-        start(scenario, new EmptyServerHandler()
+        start(scenario, new Handler.Processor()
         {
             @Override
-            protected void service(Request request, org.eclipse.jetty.server.Response response) throws Exception
+            public void process(Request request, org.eclipse.jetty.server.Response response, Callback callback) throws Exception
             {
-                if (target.startsWith("/redirect"))
+                if (request.getPathInContext().startsWith("/redirect"))
                 {
                     response.setStatus(HttpStatus.SEE_OTHER_303);
                     response.getHeaders().put(HttpHeader.LOCATION, scenario.getScheme() + "://localhost:" + connector.getLocalPort() + "/ok");
@@ -477,7 +479,7 @@ public class HttpClientRedirectTest extends AbstractHttpClientServerTest
             protected void service(Request request, org.eclipse.jetty.server.Response response) throws Exception
             {
                 response.setStatus(HttpStatus.SEE_OTHER_303);
-                response.getHeaders().put(HttpHeader.LOCATION, request.getRequestURI());
+                response.getHeaders().put(HttpHeader.LOCATION, request.getHttpURI().asString());
             }
         });
 
@@ -533,6 +535,7 @@ public class HttpClientRedirectTest extends AbstractHttpClientServerTest
             @Override
             protected void service(Request request, org.eclipse.jetty.server.Response response) throws Exception
             {
+                String target = request.getPathInContext();
                 if ("/one".equals(target))
                 {
                     response.setStatus(HttpStatus.SEE_OTHER_303);
@@ -540,39 +543,25 @@ public class HttpClientRedirectTest extends AbstractHttpClientServerTest
                 }
                 else if ("/two".equals(target))
                 {
-                    try
-                    {
-                        // Send another request to "localhost", therefore reusing the
-                        // connection used for the first request, it must timeout.
-                        CountDownLatch latch = new CountDownLatch(1);
-                        client.newRequest("localhost", connector.getLocalPort())
-                            .scheme(scenario.getScheme())
-                            .path("/three")
-                            .timeout(timeout, TimeUnit.MILLISECONDS)
-                            .send(result ->
-                            {
-                                if (result.getFailure() instanceof TimeoutException)
-                                    latch.countDown();
-                            });
-                        // Wait for the request to fail as it should.
-                        assertTrue(latch.await(2 * timeout, TimeUnit.MILLISECONDS));
-                    }
-                    catch (Throwable x)
-                    {
-                        throw new ServletException(x);
-                    }
+                    // Send another request to "localhost", therefore reusing the
+                    // connection used for the first request, it must timeout.
+                    CountDownLatch latch = new CountDownLatch(1);
+                    client.newRequest("localhost", connector.getLocalPort())
+                        .scheme(scenario.getScheme())
+                        .path("/three")
+                        .timeout(timeout, TimeUnit.MILLISECONDS)
+                        .send(result ->
+                        {
+                            if (result.getFailure() instanceof TimeoutException)
+                                latch.countDown();
+                        });
+                    // Wait for the request to fail as it should.
+                    assertTrue(latch.await(2 * timeout, TimeUnit.MILLISECONDS));
                 }
                 else if ("/three".equals(target))
                 {
-                    try
-                    {
-                        // The third request must timeout.
-                        Thread.sleep(2 * timeout);
-                    }
-                    catch (InterruptedException x)
-                    {
-                        throw new ServletException(x);
-                    }
+                    // The third request must timeout.
+                    Thread.sleep(2 * timeout);
                 }
             }
         });
@@ -596,29 +585,23 @@ public class HttpClientRedirectTest extends AbstractHttpClientServerTest
             @Override
             protected void service(Request request, org.eclipse.jetty.server.Response response) throws Exception
             {
-                try
+                String serverURI = scenario.getScheme() + "://localhost:" + connector.getLocalPort();
+                String target = request.getPathInContext();
+                if ("/one".equals(target))
                 {
-                    String serverURI = scenario.getScheme() + "://localhost:" + connector.getLocalPort();
-                    if ("/one".equals(target))
-                    {
-                        Thread.sleep(timeout);
-                        response.setStatus(HttpStatus.SEE_OTHER_303);
-                        response.getHeaders().put(HttpHeader.LOCATION, serverURI + "/two");
-                    }
-                    else if ("/two".equals(target))
-                    {
-                        Thread.sleep(timeout);
-                        response.setStatus(HttpStatus.SEE_OTHER_303);
-                        response.getHeaders().put(HttpHeader.LOCATION, serverURI + "/three");
-                    }
-                    else if ("/three".equals(target))
-                    {
-                        Thread.sleep(2 * timeout);
-                    }
+                    Thread.sleep(timeout);
+                    response.setStatus(HttpStatus.SEE_OTHER_303);
+                    response.getHeaders().put(HttpHeader.LOCATION, serverURI + "/two");
                 }
-                catch (InterruptedException x)
+                else if ("/two".equals(target))
                 {
-                    throw new ServletException(x);
+                    Thread.sleep(timeout);
+                    response.setStatus(HttpStatus.SEE_OTHER_303);
+                    response.getHeaders().put(HttpHeader.LOCATION, serverURI + "/three");
+                }
+                else if ("/three".equals(target))
+                {
+                    Thread.sleep(2 * timeout);
                 }
             }
         });
@@ -689,23 +672,25 @@ public class HttpClientRedirectTest extends AbstractHttpClientServerTest
         {
             try
             {
-                String[] paths = target.split("/", 4);
+                MultiMap<String> fields = Request.extractQueryParameters(request);
+
+                String[] paths = request.getPathInContext().split("/", 4);
 
                 int status = Integer.parseInt(paths[1]);
                 response.setStatus(status);
 
                 String host = paths[2];
                 String path = paths[3];
-                boolean relative = Boolean.parseBoolean(request.getParameter("relative"));
-                String location = relative ? "" : request.getScheme() + "://" + host + ":" + request.getServerPort();
+                boolean relative = Boolean.parseBoolean(fields.getValue("relative"));
+                String location = relative ? "" : request.getHttpURI().getScheme() + "://" + host + ":" + Request.getServerPort(request);
                 location += "/" + path;
 
-                if (Boolean.parseBoolean(request.getParameter("decode")))
-                    location = URLDecoder.decode(location, "UTF-8");
+                if (Boolean.parseBoolean(fields.getValue("decode")))
+                    location = URLDecoder.decode(location, StandardCharsets.UTF_8);
 
                 response.getHeaders().put("Location", location);
 
-                if (Boolean.parseBoolean(request.getParameter("close")))
+                if (Boolean.parseBoolean(fields.getValue("close")))
                     response.getHeaders().put("Connection", "close");
             }
             catch (NumberFormatException x)
